Reduced image size

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 
             </div>
         </div>
-            <img src="images/Erik Fishing Landscape.jpg">
+            <img src="images/Beach.jpg">
     </section>
 
     <main>
