--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Erik The Red</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <section>
         <div class="top">
             
-            <img src="images/Erik-the-Red-BLACK 2.jpg">  
+            <img src="images/Erik-the-Red-BLACK 2.jpg" alt="erik-the-red-logo" class="logo">  
             
             <div id="t-div">
 
@@ -23,7 +23,7 @@
 
             </div>
         </div>
-            <img src="images/Beach.jpg">
+            <img src="images/Erik Fishing Landscape.jpg" alt="me-fishing" class="slide">
     </section>
 
     <main>
@@ -34,16 +34,22 @@
         </nav>
         <div class="grid">
 
-            <img src="images/_DSC6779.JPG" id="fox-yawn" class="img">
-            <img src="images/_DSC6616.JPG" id="blue-jay" class="img">
-            <img src="images/_DSC6586.JPG" id="pine-martin" class="img">
-            <img src="images/Chick a dee.jpg" id="chick" class="img">
-            <img src="images/master_DSC5772-10-point-buck-725-web.jpg" id="buck">
-            <img src="images/master_DSC6179-resting-red-fox-725-web.jpg" id="fox-laying">
-            <img src="images/_DSC6118.JPG" id="fox-look" class="img">
-            <img src="images/_DSC6074.JPG" id="fox" class="img">
+            <img src="images/_DSC6779.JPG"  alt="fox-yawn" id="fox-yawn" class="img">
+            <img src="images/_DSC6616.JPG" alt="blue-jay" id="blue-jay" class="img">
+            <img src="images/_DSC6586.JPG" alt="pine-martin" id="pine-martin" class="img">
+            <img src="images/Chick a dee.jpg" alt="chick" id="chick" class="img">
+            <img src="images/master_DSC5772-10-point-buck-725-web.jpg" alt="deer" id="buck" class="img">
+            <img src="images/master_DSC6179-resting-red-fox-725-web.jpg" alt="fox-sitting" id="fox-laying" class="img">
+            <img src="images/_DSC6118.JPG"  alt="fox-standing" id="fox-look" class="img">
+            <img src="images/_DSC6074.JPG" alt="fox-looking" id="fox" class="img">
         </div>
 
     </main>
+
+    <footer>
+        <h2>
+            &#169;Copyright 
+        </h2>
+    </footer>
 </body>
 </html>
