--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Erik The Red</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
@@ -13,8 +13,7 @@
     <section>
         <div class="top">
             
-            <img src="images/Erik-the-Red-BLACK 2.jpg">  
-            
+            <img src="images/Erik-the-Red-BLACK 2.jpg" alt="logo-of-erik-the-red" class="logo"> 
             <div id="t-div">
 
                 <h1 class="tittle">
@@ -23,7 +22,7 @@
 
             </div>
         </div>
-            <img src="images/Erik Fishing Landscape.jpg">
+            <img src="images/Erik Fishing Landscape.jpg" alt="erik-fishing" class="slide">
     </section>
     <main>
 
@@ -34,12 +33,17 @@
         </nav>
         <div>
 
-            <img src="images/IMG_0477.jpg" id="me">
+            <img src="images/IMG_0477.jpg" alt="image-of-me" id="me">
         </div>
             <p>
-                Hi, my name is Erik Bertelsen and I love the outdoors. This website shows you images of mine as well my history and my hobbies.
+                Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine as well my history and my hobbies.
             </p>
     </main>
+    <footer>
+        <h2>
+            &#169; Copyright 
+        </h2>
+    </footer>
 >
 </body>
 </html>
