--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
         <div class="top">
             
-            <img src="images/Erik-the-Red-BLACK 2.jpg" alt="logo-of-erik-the-red" class="logo"> 
+            <img src="images/Erik-the-Red-BLACK-2.png" alt="logo-of-erik-the-red" class="logo"> 
             <div id="t-div">
 
                 <h1 class="tittle">
@@ -32,12 +32,26 @@
             <a href="gallery.html" class="nav-link"> Gallery</a>
         </nav>
         <div>
-
             <img src="images/IMG_0477.jpg" alt="image-of-me" id="me">
-        </div>
+            <h2>
+                About Me
+            </h2>
             <p>
                 Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine as well my history and my hobbies.
             </p>
+        </div>
+        <div>
+            <img src="images/Erik-the-Red-BLACK 2.jpg" alt="logo" id="my-logo">
+
+            <h2>
+                About My Logo
+            </h2>
+
+            <p>
+                I designed my logo as a viking, my reason for this is becasue I have a half danish background and it's history has a had a big impact on me. I was named after a a viking Erik The Red who discoverd Greenland.
+            </p>
+        </div>
+
     </main>
     <footer>
         <h2>
