--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <section>
         <div class="top">
             
-            <img src="images/Erik-the-Red-BLACK 2.jpg" alt="erik-the-red-logo" class="logo">  
+            <img src="images/Erik-the-Red-BLACK-2.png" alt="erik-the-red-logo" class="logo">  
             
             <div id="t-div">
 
