--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="contact.html" class="nav-link"> Contact</a>
             <a href="gallery.html" class="nav-link"> Gallery</a>
         </nav>
-        <div>
+        <div class="home-cont">
             <img src="images/IMG_0477.jpg" alt="image-of-me" id="me">
             <h2>
                 About Me
@@ -40,7 +40,7 @@
                 Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine as well my history and my hobbies.
             </p>
         </div>
-        <div>
+        <div class="home-cont">
             <img src="images/Erik-the-Red-BLACK 2.jpg" alt="logo" id="my-logo">
 
             <h2>
