sunday night changes

--- a/gallery.html
+++ b/gallery.html
@@ -12,18 +12,19 @@
 <body>
     <section>
         <div class="top">
-            
+            <!-- logo -->
             <img src="images/Erik-the-Red-BLACK-2.png" alt="erik-the-red-logo" class="logo">  
             
             <div id="t-div">
-
+                <!-- tittle visible in tablet and desktop -->
                 <h1 class="tittle">
                     Erik The Red
                 </h1>  
 
             </div>
         </div>
-            <img src="images/Erik Fishing Landscape.jpg" alt="me-fishing" class="slide">
+        <!-- adding banner image -->
+            <img src="images/Erik_Fishing_Landscape.jpg" alt="me-fishing" class="slide">
     </section>
 
     <main>
@@ -32,12 +33,13 @@
             <a href="contact.html" class="nav-link"> Contact</a>
             <a href="gallery.html" class="nav-link"> Gallery</a>
         </nav>
+        <!-- adding a class so it is easily accessible -->
         <div class="grid">
-
+            <!-- adding multiple images in a grid layout -->
             <img src="images/_DSC6779.JPG"  alt="fox-yawn" id="fox-yawn" class="img">
             <img src="images/_DSC6616.JPG" alt="blue-jay" id="blue-jay" class="img">
             <img src="images/_DSC6586.JPG" alt="pine-martin" id="pine-martin" class="img">
-            <img src="images/Chick a dee.jpg" alt="chick" id="chick" class="img">
+            <img src="images/Chick_a_dee.jpg" alt="chick" id="chick" class="img">
             <img src="images/master_DSC5772-10-point-buck-725-web.jpg" alt="deer" id="buck" class="img">
             <img src="images/master_DSC6179-resting-red-fox-725-web.jpg" alt="fox-sitting" id="fox-laying" class="img">
             <img src="images/_DSC6118.JPG"  alt="fox-standing" id="fox-look" class="img">
@@ -47,6 +49,7 @@
     </main>
 
     <footer>
+        <!-- copyright line -->
         <h2>
             &#169;Copyright 
         </h2>
