--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- links -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,52 +12,62 @@
 </head>
 <body>
     <section>
+        <!-- adding a class so it is easily accessible -->
         <div class="top">
-            
+            <!-- adding logo to top of page -->
             <img src="images/Erik-the-Red-BLACK-2.png" alt="logo-of-erik-the-red" class="logo" > 
             <div id="t-div">
-
+                <!-- tittle, hidden during mobil -->
                 <h1 class="tittle">
                     Erik The Red
                 </h1>  
 
             </div>
         </div>
-            <img src="images/Erik Fishing Landscape.jpg" alt="erik-fishing" class="slide">
+        <!-- banner image -->
+            <img src="images/Erik_Fishing_Landscape.jpg" alt="erik-fishing" class="slide">
     </section>
     <main>
-
+        <!-- navigation -->
         <nav>
             <a href="index.html" class="nav-link"> Home</a>
             <a href="contact.html" class="nav-link"> Contact</a>
             <a href="gallery.html" class="nav-link"> Gallery</a>
         </nav>
+        <!-- image of Me -->
         <div class="home-cont">
             <img src="images/IMG_0477.jpg" alt="image-of-me" id="me">
             <h2>
                 About Me
             </h2>
-            <p>
-                Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine as well my history and my hobbies.
+            <!-- adding a class so it is easily accessible -->
+            <p class="pad">
+                Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine and my love of nature.
             </p>
         </div>
+        <!-- image of my Logo -->
         <div class="home-cont">
-            <img src="images/Erik-the-Red-BLACK 2.jpg" alt="logo" id="my-logo">
+            <img src="images/Erik-the-Red-BLACK_2.jpg" alt="logo" id="my-logo">
 
             <h2>
                 About My Logo
             </h2>
-
-            <p>
+            <!-- descritption of my logo -->
+            <p class="pad">
                 I designed my logo as a viking, my reason for this is becasue I have a half danish background and it's history has a had a big impact on me. I was named after a a viking Erik The Red who discoverd Greenland.
             </p>
         </div>
 
     </main>
+
     <footer>
+        <!-- copyright line -->
         <h2>
             &#169; Copyright 
         </h2>
+
+        
+
     </footer>
 >
 </body>
