--- a/contact.html
+++ b/contact.html
@@ -55,12 +55,12 @@
                             <div>
                                 <label for="message">Your Message</label>
                                 <input type= "text" name="yourmessage"
-                                 class="message">
+                                 class="message" id="message">
                                 
                             </div>
-                            <!-- adding a submit button -->
-                            <button type="submit">Send</button>
                         </form>
+                        <!-- adding a submit button -->
+                        <button id="button" type="submit">Send</button>
                     </section>
                 </div>
                 <!-- adding google maps -->
@@ -68,12 +68,12 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d179593.16776735926!2d-79.41729599839366!3d45.3055319125396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4d2a722da13ab7e9%3A0x8bf6ace2df93b679!2sHuntsville%2C%20ON!5e0!3m2!1sen!2sca!4v1614544634148!5m2!1sen!2sca" style="border:0;" allowfullscreen="" loading="lazy" id="map"></iframe>    
                 </div>
             </main>
-    </body>
-        <footer>
-            <!-- copyright line -->
-            <h2>
-                &#169;Copyright 
-            </h2>
-        </footer>
+            <footer>
+                <!-- copyright line -->
+                <h2>
+                    &#169;Copyright 
+                </h2>
+            </footer>
+        </body>
         
 </html>
