--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- adding logo to top of page -->
             <img src="images/Erik-the-Red-BLACK-2.png" alt="logo-of-erik-the-red" class="logo" > 
             <div id="t-div">
-                <!-- tittle, hidden during mobil -->
+                <!-- tittle, hidden during mobile -->
                 <h1 class="tittle">
                     Erik The Red
                 </h1>  
