--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             </h2>
             <!-- adding a class so it is easily accessible -->
             <p class="pad">
-                Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine and my love of nature.
+                Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine and my love of nature. I was born in Huntsville Ontario and would spend my winters in the Florida Everglades. Being exposed to all different types of nature at a young age had a big affect on how I see things. I know love capturing the beauty of nature doing both photography and videography.
             </p>
         </div>
         <!-- image of my Logo -->
         <div class="home-cont">
-            <img src="images/Erik-the-Red-BLACK_2.jpg" alt="logo" id="my-logo">
+            <img src="images/Erik-the-Red-BLACK_2.jpg" alt="logo" id="my-logo" class="home-img">
 
             <h2>
                 About My Logo
             </h2>
             <!-- descritption of my logo -->
             <p class="pad">
-                I designed my logo as a viking, my reason for this is becasue I have a half danish background and it's history has a had a big impact on me. I was named after a a viking Erik The Red who discoverd Greenland.
+                I designed my logo as a viking, my reason for this is becasue I have a half danish background .The Danish  history has a had a big impact on me. I was named after a a viking Erik The Red who discoverd Greenland.
             </p>
         </div>
 
