--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://iconmonstr.com">
 </head>
 <body>
     <section>
@@ -65,6 +66,11 @@
         <h2>
             &#169; Copyright 
         </h2>
+        <p id="icon">
+
+            <i class="im im-youtube"></i>
+            
+        </p>
 
         
 
