--- a/gallery.html
+++ b/gallery.html
@@ -36,14 +36,14 @@
         <!-- adding a class so it is easily accessible -->
         <div class="grid">
             <!-- adding multiple images in a grid layout -->
-            <img src="images/_DSC6779.JPG"  alt="fox-yawn" id="fox-yawn" class="img">
-            <img src="images/_DSC6616.JPG" alt="blue-jay" id="blue-jay" class="img">
+            <img src="images/fox-yawn.JPG"  alt="fox-yawn" id="fox-yawn" class="img">
+            <img src="images/blue-jay.JPG" alt="blue-jay" id="blue-jay" class="img">
             <img src="images/pine-martin.JPG" alt="pine-martin" id="pine-martin" class="img">
             <img src="images/Chick_a_dee.jpg" alt="chick" id="chick" class="img">
             <img src="images/master_DSC5772-10-point-buck-725-web.jpg" alt="deer" id="buck" class="img">
             <img src="images/master_DSC6179-resting-red-fox-725-web.jpg" alt="fox-sitting" id="fox-laying" class="img">
-            <img src="images/_DSC6118.JPG"  alt="fox-standing" id="fox-look" class="img">
-            <img src="images/_DSC6074.JPG" alt="fox-looking" id="fox" class="img">
+            <img src="images/fox-staring.JPG"  alt="fox-standing" id="fox-look" class="img">
+            <img src="images/fox-looking.JPG" alt="fox-looking" id="fox" class="img">
         </div>
 
     </main>
