--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://iconmonstr.com">
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
 </head>
 <body>
     <section>
@@ -69,7 +69,7 @@
         <p id="icon">
 
             <i class="im im-youtube"></i>
-            
+
         </p>
 
         
