wendesday night changes

--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
 </head>
 <body>
     <section>
@@ -51,8 +52,17 @@
     <footer>
         <!-- copyright line -->
         <h2>
-            &#169;Copyright 
+            &#169;Copyright Erik The Red 2021 
         </h2>
+        <p id="icon">
+
+            <i class="im im-youtube"></i>
+
+            <i class="im im-instagram"></i>
+
+            <i class="im im-mail"></i>
+        </p>
+
     </footer>
 </body>
 </html>
