--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </h2>
             <!-- descritption of my logo -->
             <p class="pad">
-                I designed my logo as a viking, my reason for this is becasue I have a half danish background .The Danish  history has a had a big impact on me. I was named after a a viking Erik The Red who discoverd Greenland.
+                I designed my logo as a Viking, my reason for this is because I have a half Danish background .The Danish  history has a had a big impact on me. I was named after a Viking Erik The Red who discovered Greenland.
             </p>
         </div>
 
@@ -64,12 +64,15 @@
     <footer>
         <!-- copyright line -->
         <h2>
-            &#169; Copyright 
+            &#169; Copyright Erik The Red 2021 
         </h2>
         <p id="icon">
 
             <i class="im im-youtube"></i>
 
+            <i class="im im-instagram"></i>
+
+            <i class="im im-mail"></i>
         </p>
 
         
