saturday morning adjustments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
@@ -68,11 +70,10 @@
         </h2>
         <p id="icon">
 
-            <i class="im im-youtube"></i>
+            <a href="https://www.youtube.com/channel/UCoflIGr9LuZNKnIGVNr8DKQ"><i class="im im-youtube"></i></a>
+            
+            <a href="https://www.instagram.com/erik_the_red32/"> <i class="im im-instagram"></i></a>
 
-            <i class="im im-instagram"></i>
-
-            <i class="im im-mail"></i>
         </p>
 
         
