--- a/gallery.html
+++ b/gallery.html
@@ -59,11 +59,10 @@
         </h2>
         <p id="icon">
 
-            <i class="im im-youtube"></i>
+            <a href="https://www.youtube.com/channel/UCoflIGr9LuZNKnIGVNr8DKQ"><i class="im im-youtube"></i></a>
+            
+            <a href="https://www.instagram.com/erik_the_red32/"> <i class="im im-instagram"></i></a>
 
-            <i class="im im-instagram"></i>
-
-            <i class="im im-mail"></i>
         </p>
 
     </footer>
