--- a/contact.html
+++ b/contact.html
@@ -46,17 +46,17 @@
                     <section class="chosen">
                         <h3>Contact to learn more</h3>
                         <form action="thanks.html" method="post">
-                            <div>
+                            <div class="align">
                                 <label for="fullname">Your Name</label>
                                 <input type="text" name="fullanme" 
                                 id="fullname" class="message">
                             </div>
-                            <div>
+                            <div class="align">
                                 <label for="youremail">Your Email</label>
                                 <input type="email" name="youremail" id="youremail" required
                                 class="message">
                             </div>
-                            <div>
+                            <div class="align">
                                 <label for="message">Your Message</label>
                                 <input type= "text" name="yourmessage"
                                  class="message" id="message">
