Monday Night final changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </h2>
             <!-- adding a class so it is easily accessible -->
             <p class="pad">
-                Hi, my name is Erik Bertelsen and I love the outdoors. This website shows images of mine and my love of nature. I was born in Huntsville Ontario and would spend my winters in the Florida Everglades. Being exposed to all different types of nature at a young age had a big affect on how I see things. I know love capturing the beauty of nature doing both photography and videography.
+                Hi, my name is Erik Bertelsen and I love the outdoors. I was born in Huntsville Ontario and have spent most of my childhood in the Florida Everglades during the winter time. Being exposed to all different types of nature at a young age had a profound affect on how I see things. Through my photography and videography I attempt to share my vision of the natural world and all of the miracles it has to offer. Please enjoy my gallery, and I invite you to view the options for private photography tours that may appeal to you as a beginner or advanced photographer.
             </p>
         </div>
         <!-- image of my Logo -->
@@ -57,7 +57,7 @@
             </h2>
             <!-- descritption of my logo -->
             <p class="pad">
-                I designed my logo as a Viking, my reason for this is because I have a half Danish background .The Danish  history has a had a big impact on me. I was named after a Viking Erik The Red who discovered Greenland.
+                I designed my logo as a Viking.  My reason for this is because of my Danish heritage. I was named after the famous Viking explorer Erik The Red who discovered Greenland. Erik the Red serves as a visual symbol that is easily recognizable and stands for the spirit of exporation and adventure.
             </p>
         </div>
 
